--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,9 @@
 ADMIN_USERNAME=admin
 ADMIN_PASSWORD=admin
 
+# Cron Job Secret (generate a random string for security)
+CRON_SECRET=your-random-secret-string-here
+
 # Vercel KV (these will be automatically set by Vercel when you add KV storage)
 # KV_REST_API_URL=
 # KV_REST_API_TOKEN=
