--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vercel/kv": "^3.0.0",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
